--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="container">
-    <h2 class="mt-5">Start/Watch stream video</h2>
+    <h2 class="mt-5">1. Start/Watch stream video</h2>
     <div class="videos">
       <span>
         <h3>Stream</h3>
@@ -32,16 +32,16 @@
       <button id="streamButton" class="btn btn-primary" disabled>Start</button>
     </div>
 
-    <h2 class="mt-5">3. Join a Call</h2>
-    <p>Answer the call from a different browser window or device</p>
+    <h2 class="mt-5">3. Join to Stream</h2>
+
 
     <div class="input-group mb-3">
       <input id="callInput" type="text" class="form-control" placeholder="Enter stream code" aria-label="Call code" aria-describedby="answerButton" />
       <button id="answerButton" class="btn btn-primary" disabled>Join</button>
     </div>
 
-    <h2 class="mt-5">4. Hangup</h2>
-    <button id="hangupButton" class="btn btn-danger" disabled>Hangup</button>
+    <h2 class="mt-5">4. Leave Stream</h2>
+    <button id="hangupButton" class="btn btn-danger" disabled>Leave</button>
   </div>
 
   <!-- Importar Bootstrap JS y el archivo JavaScript personalizado -->
