--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               aria-label="Call code"
               aria-describedby="answerButton"
             />
-            <button id="message-buttom" class="btn btn-primary" >
+            <button id="message-buttom" class="btn btn-primary" disabled>
               Send
             </button>
           </div>
@@ -60,21 +60,21 @@
           aria-label="Call code"
           aria-describedby="answerButton"
         />
-        <button id="stream-start-buttom" class="btn btn-primary">Start</button>
+        <button id="stream-start-buttom" class="btn btn-primary" disabled>Start</button>
       </div>
 
       <h2 class="mt-5">3. Join to Stream</h2>
 
       <div class="input-group mb-3">
         <input
-          id="callInput"
+          id="join-stream-input"
           type="text"
           class="form-control"
           placeholder="Enter stream code"
           aria-label="Call code"
           aria-describedby="answerButton"
         />
-        <button id="answerButton" class="btn btn-primary" disabled>Join</button>
+        <button id="join-stream-button" class="btn btn-primary">Join</button>
       </div>
 
       <h2 class="mt-5">4. Leave Stream</h2>
