--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span>
           <h3>Stream</h3>
 
-          <video id="webcamVideo" autoplay playsinline></video>
+          <video id="stream-video" autoplay playsinline></video>
         </span>
         <div class="live-chat-container">
           <h3>Live chat</h3>
